# PIPE

./: .dockerignore  .github-workflow-guide.md  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .woodpecker-ai-docs.yml  .woodpecker.yml  AXIS-BOT-TEMPLATE.md  AXIS_BOT_README_TEMPLATE.md  AXIS_DOCUMENTATION_SUMMARY.md  BSW-AGILE-ARCHITECTURE-INTEGRATION-SUCCESS.md  BSW-ARCH-Container-Orchestration.md  BSW-ARCH-Documentation-Index.md  BSW-ARCH-Memory-Optimization.md  BSW-ARCH-Overview.md  BSW-ARCH-Service-Architecture.md  BSW-ARCH-Troubleshooting.md  BSW-FEAT-001-ZITADEL-HA-COMPLETE.md  BSW-KERAG-R-DEPLOYMENT.md  BSW-N8N-DEPLOYMENT-COMPLETE.md  CI-CD-PIPELINE.md  CLAUDE.md  Dockerfile  ENTERPRISE-PLATFORM-DEPLOYMENT-COMPLETE.md  FOLDER-STRUCTURE.md  HEALTH-MONITORING-REPORT.md  KNOWLEDGE-GRAPH-QUICKSTART.md  LICENSE  Makefile  PERFORMANCE-OPTIMIZATION-REPORT.md  PR-DESCRIPTION.md  PRODUCTION-DEPLOYMENT-VALIDATION.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  SERVICE_DEPENDENCIES.md  STARTUP_GUIDE.md  STRUCTURE-REORGANIZATION-PLAN.md  TODO_PERSISTENT.md  docker-compose.yml  integrate-bot-docs.sh  (+6 more)
.claude/: settings.local.json
.codeberg/issue_templates/: Infrastructure User Stories.yml
ansible-playbooks/: hybrid-architects-infrastructure.yml  traefik-consul-playbook.yml  zot-registry-playbook.yml
axis-bots/: README-BOT-EXAMPLES.md  README.md
backup-disaster-recovery/: backup-automation.py  deploy-backup-system.sh  disaster-recovery-procedures.sh
bot-utils/: README.md  complete-platform-setup.sh  create_embeddings_chunks.py  doc_scanner.py  enhanced_mcp_server.py  github_api_client.py  graph_indexer_with_specs.py  proton_drive_sync.py
cag-rag-system/: README.md  requirements.txt
code/: README.md
config/: config.yaml  grafana-dashboard.json  prometheus.yml
containers/: apko.yaml
docs/: AI_INTEGRATIONS_QUICKSTART.md  AI_INTEGRATION_ARCHITECTURE.md  ARCHITECTURE.md  BIDIRECTIONAL-SYNC-ARCHITECTURE.md  CHANGELOG.md  CI_CD_SETUP.md  CLOUD_NATIVE_STACK.md  COGNEE_INTEGRATION.md  EUROSTACK_ALIGNMENT.md  GOVERNANCE.md  INDEX.md  INFRASTRUCTURE.md  INTEGRATION_PATTERNS.md  MCP_INTEGRATION.md  MONITORING.md  OPENSPEC_GUIDE.md  OPENSPEC_INTEGRATION.md  PR_REVIEW_BOT.md  QUICK_START.md  TREE.txt  catalogue.yaml  metadata.json
eco-bots/: README-BOT-EXAMPLES.md  README.md
examples/: ai_integrations_demo.py  governance_demo.py  integration_bni_auth.py  integration_bnp_services.py  workflow_multi_domain.py
iac/: README.md
knowledge-graph/: README.md
openspec/: project.md
scripts/: codeberg-issue-creator.sh  consolidate-domain-to-github.sh  convert-codeberg-to-github.sh  governance_cli.py  run_tests.sh  setup-dev.sh  start_bots.sh
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_pr_review_bot.py
wiki/: API-Reference.md  Getting-Started.md  Home.md  _Footer.md  _Sidebar.md
(+243 files in other folders)
